--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head><title>Portfolio Project</title></head>
     <body>
         <h1>Fuzail's Portfolio Website</h1>
-<h2>I'm Web Developer</h2>
+<h2>I'm a Web Developer</h2>
 <hr /><p></p>
 <b><a href="./public/movie-ranking.html">Movie Ranking Project</a></b><p></p>
 <a href="./public/movie-ranking.html"><img src="./assets/images/movieproj.png" height="200"></a><br>
